--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,6 @@
             android:layout_marginTop="24dp"
             app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-    />
+            android:onClick="startSpeechRecognision"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
