--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,17 +13,22 @@
             android:text="@string/editCommand"
             android:ems="10"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/editTextTextPersonName" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="24dp"/>
+            android:id="@+id/editTextTextPersonName"
+            app:layout_constraintTop_toBottomOf="@+id/imageButton" android:layout_marginTop="24dp"/>
     <ImageButton
             android:layout_width="64dp"
             android:layout_height="64dp"
             android:scaleType="fitCenter"
             android:src="@drawable/android_mic_icon_16"
             android:id="@+id/imageButton"
-            android:layout_marginTop="24dp"
-            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:onClick="startSpeechRecognision"/>
+            android:onClick="startSpeechRecognision" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="24dp"/>
+    <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" app:srcCompat="@drawable/ico_mic" android:id="@+id/imageButton2"
+            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
+            android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
