--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,6 +71,7 @@
             android:layout_height="wrap_content" android:id="@+id/button"
             app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
             app:layout_constraintStart_toEndOf="@+id/imageButton2"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"/>
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"
+            android:onClick="startCommandsButton"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
